--- a/code-ch01/Chapter1.ipynb
+++ b/code-ch01/Chapter1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
@@ -43,9 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -55,18 +76,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(7 % 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print(-27 % 13)"
    ]
@@ -87,25 +124,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "37\n",
+      "51\n",
+      "41\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 57\n",
     "# 44+33\n",
+    "print((44+33)%prime)\n",
+    "\n",
     "# 9-29\n",
+    "print((9-29)%prime)\n",
     "# 17+42+49\n",
-    "# 52-30-38"
+    "print((17+42+49)%prime)\n",
+    "\n",
+    "# 52-30-38\n",
+    "print((52-30-38)%prime)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
@@ -127,11 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
+    "\n",
+    "def __sub__(self, other):\n",
+    "    if self.prime != other.prime:\n",
+    "        raise TypeError('Cannot subtract numbers in different fields')\n",
+    "    num = (self.num - other.num) % self.prime\n",
+    "    return self.__class__(num, self.prime)\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.FieldElementTest(\"test_sub\"))"
@@ -152,17 +232,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "68\n",
+      "63\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
     "prime = 97\n",
     "\n",
     "# 95*45*31\n",
+    "eq = 95*45*31\n",
+    "print((eq)%prime)\n",
+    "\n",
     "# 17*13*19*44\n",
-    "# 12**7*77**49"
+    "eq = 17*13*19*44\n",
+    "print((eq)%prime)\n",
+    "# 12**7*77**49\n",
+    "eq = 12**7*77**49\n",
+    "print((eq)%prime)\n"
    ]
   },
   {
@@ -180,25 +277,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
     "prime = 19\n",
-    "k = 1  # 3, 7, 13 and 18 are the other possibilities\n",
+    "k = (1, 3, 7, 13, 18) #are the other possibilities\n",
     "# loop through all possible k's 0 up to prime-1\n",
     "# calculate k*iterator % prime\n",
+    "# Hint - sort!\n",
     "\n",
-    "# Hint - sort!"
+    "# for n in range(0,prime):\n",
+    "#     multiply = [n*x for x in k]\n",
+    "#     print(n, sum(multiply) % prime)\n",
+    "\n",
+    "for num in k:\n",
+    "    print(sorted([num*x % prime for x in range(prime)]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(3, 13)\n",
@@ -220,9 +343,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6\n",
     "\n",
@@ -232,9 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(3, 13)\n",
@@ -255,13 +398,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7\n",
     "\n",
-    "primes = [7, 11, 17, 31, 43]"
+    "primes = [7, 11, 17, 31, 43]\n",
+    "\n",
+    "for prime in primes:\n",
+    "    print([pow(num, prime-1, prime)for num in range(1, prime)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function pow in module builtins:\n",
+      "\n",
+      "pow(x, y, z=None, /)\n",
+      "    Equivalent to x**y (with two arguments) or x**y % z (with three arguments)\n",
+      "    \n",
+      "    Some types, such as ints, are able to use a more efficient algorithm when\n",
+      "    invoked using the three argument form.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pow)"
    ]
   },
   {
@@ -279,15 +461,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 29, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 8\n",
     "\n",
     "# 3/24\n",
-    "# 17**-3\n",
-    "# 4**-4*11"
+    "prime = 31\n",
+    "answers = []\n",
+    "\n",
+    "x = (pow(24, prime -2, prime) * 3) % prime\n",
+    "\n",
+    "answers.append(x)\n",
+    "\n",
+    "# 17**-3 = 1/17 /17 /17 = 1 / 17^3\n",
+    "\n",
+    "denom = 17 ** 3 % prime\n",
+    "x = pow(denom, prime-2, prime)\n",
+    "answers.append(x)\n",
+    "\n",
+    "\n",
+    "# 4**-4*11 = 11 * 1/ 4**4 \n",
+    "denom = 4**4 % prime\n",
+    "nom = pow(denom, prime-2,prime) \n",
+    "x = (nom * 11) % prime\n",
+    "answers.append(x)\n",
+    "\n",
+    "print(answers)"
    ]
   },
   {
@@ -305,9 +514,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 9\n",
     "\n",
@@ -317,9 +538,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
@@ -328,7 +557,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
