--- a/code-ch03/Chapter3.ipynb
+++ b/code-ch03/Chapter3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,49 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# (192,105), (17,56), (200,119), (1,193), (42,99)"
+    "test_points = [(192,105), (17,56), (200,119), (1,193), (42,99)]\n",
+    "\n",
+    "def on_line(point: tuple, prime: int = 223, a: int = 0, b: int = 7) -> bool:\n",
+    "    x = FieldElement(point[0], prime)\n",
+    "    y = FieldElement(point[1], prime)\n",
+    "    a = FieldElement(a, prime)\n",
+    "    b = FieldElement(b, prime)\n",
+    "    return (y**2 == x**3 + a*x + b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, False, True, False]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[on_line(point) for point in test_points]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(192,105)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "a = FieldElement(num=0, prime=223)\n",
@@ -60,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(170,142)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "prime = 223\n",
@@ -92,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(220,181)_0_7 FieldElement(223)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -103,8 +157,52 @@
     "b = FieldElement(7, prime)\n",
     "\n",
     "# (170,142) + (60,139)\n",
+    "Point(FieldElement(170, prime), FieldElement(142, prime), a, b) + \\\n",
+    "Point(FieldElement(60, prime), FieldElement(139, prime), a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(215,68)_0_7 FieldElement(223)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# (47,71) + (17,56)\n",
-    "# (143,98) + (76,66)"
+    "Point(FieldElement(47, prime), FieldElement(71, prime), a, b) + \\\n",
+    "Point(FieldElement(17, prime), FieldElement(56, prime), a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(47,71)_0_7 FieldElement(223)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (143,98) + (76,66)\n",
+    "Point(FieldElement(143, prime), FieldElement(98, prime), a, b) + \\\n",
+    "Point(FieldElement(76, prime), FieldElement(66, prime), a, b)"
    ]
   },
   {
@@ -120,9 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -148,33 +258,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(49,71)_0_7 FieldElement(223)\n",
+      "Point(64,168)_0_7 FieldElement(223)\n",
+      "Point(36,111)_0_7 FieldElement(223)\n",
+      "Point(194,51)_0_7 FieldElement(223)\n",
+      "Point(116,55)_0_7 FieldElement(223)\n",
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
+    "from ecc import FieldElement, Point\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# 2*(192, 105)\n",
-    "# 2*(143, 98)\n",
-    "# 2*(47, 71)\n",
-    "# 4*(47, 71)\n",
-    "# 8*(47, 71)\n",
-    "# 21*(47, 71)\n",
+    "opps = ((2, 192, 105), (2,143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
-    "# create a product variable\n",
-    "# add the point to the product n times\n",
-    "# print the product"
+    "for prod, raw_x, raw_y in opps:\n",
+    "    # create a product variable\n",
+    "#     prod = FieldElement(raw_prod, prime)\n",
+    "#     print(raw_prod, raw_x, raw_y)\n",
+    "    x = FieldElement(num=raw_x, prime=prime)\n",
+    "    y = FieldElement(num=raw_y, prime=prime)\n",
+    "    \n",
+    "    p = Point(x, y, a, b)\n",
+    "    total = int(prod) * p\n",
+    "#     # add the point to the product n times\n",
+    "#     series = [[p]] * prod\n",
+    "#     flat_series = [item for sublist in series for item in sublist]\n",
+    "#     total = flat_series[0]\n",
+    "#     for point in flat_series[1:]:\n",
+    "#         total += point\n",
+    "    # print the product\n",
+    "    print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1*(47,71)=(47,71)\n",
+      "2*(47,71)=(36,111)\n",
+      "3*(47,71)=(15,137)\n",
+      "4*(47,71)=(194,51)\n",
+      "5*(47,71)=(126,96)\n",
+      "6*(47,71)=(139,137)\n",
+      "7*(47,71)=(92,47)\n",
+      "8*(47,71)=(116,55)\n",
+      "9*(47,71)=(69,86)\n",
+      "10*(47,71)=(154,150)\n",
+      "11*(47,71)=(154,73)\n",
+      "12*(47,71)=(69,137)\n",
+      "13*(47,71)=(116,168)\n",
+      "14*(47,71)=(92,176)\n",
+      "15*(47,71)=(139,86)\n",
+      "16*(47,71)=(126,127)\n",
+      "17*(47,71)=(194,172)\n",
+      "18*(47,71)=(15,86)\n",
+      "19*(47,71)=(36,112)\n",
+      "20*(47,71)=(47,152)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "prime = 223\n",
@@ -199,9 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
@@ -214,17 +382,31 @@
     "inf = Point(None, None, a, b)\n",
     "\n",
     "# create a product variable\n",
+    "product = p\n",
     "# create a counter variable\n",
+    "count = 1\n",
     "# loop until the product is the point at infinity\n",
-    "# add the point to the product and increment counter\n",
-    "# print the counter when exited from loop"
+    "while product != inf:\n",
+    "    # add the point to the product and increment counter\n",
+    "    product += p\n",
+    "    count += 1\n",
+    "# print the counter when exited from loop\n",
+    "print(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "prime = 223\n",
@@ -238,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "gx = 0x79be667ef9dcbbac55a06295ce870b07029bfcdb2dce28d959f2815b16f81798\n",
     "gy = 0x483ada7726a3c4655da4fbfc0e1108a8fd17b448a68554199c47d08ffb10d4b8\n",
@@ -250,9 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "gx = 0x79be667ef9dcbbac55a06295ce870b07029bfcdb2dce28d959f2815b16f81798\n",
@@ -269,9 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import G, N\n",
     "print(N*G)"
@@ -279,9 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, G, N\n",
     "z = 0xbc62d4b80d9e36da29c16c5d4d9f11731f36052c72401a76c23c0fb5a9b74423\n",
@@ -322,9 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6\n",
     "\n",
@@ -335,17 +557,54 @@
     "z = 0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60\n",
     "r = 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395\n",
     "s = 0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
-    "# signature 2\n",
-    "z = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d\n",
-    "r = 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c\n",
-    "s = 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6"
+    "\n",
+    "s_inv = pow(s, N-2, N)\n",
+    "u = z * s_inv % N\n",
+    "v = r * s_inv % N\n",
+    "print((u*G + v*point).x.num == r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# signature 2\n",
+    "z = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d\n",
+    "r = 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c\n",
+    "s = 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
+    "\n",
+    "s_inv = pow(s, N-2,N)\n",
+    "u = z * s_inv % N\n",
+    "v = r * s_inv % N\n",
+    "print((u*G + v*point).x.num == r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(028d003eab2e428d11983f3e97c3fa0addf3b42740df0d211795ffb3be2f6c52, 0ae987b9ec6ea159c78cb2a937ed89096fb218d9e7594f02b547526d8cd309e2)\n",
+      "0x231c6f3d980a6b0fb7152f85cee7eb52bf92433d9919b9c5218cb08e79cce78\n",
+      "0x2b698a0f0a4041b77e63488ad48c23e8e8838dd1fb7520408b121697b782ef22\n",
+      "0xbb14e602ef9e3f872e25fad328466b34e6734b7a0fcd58b1eb635447ffae8cb9\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, G, N\n",
     "from helper import hash256\n",
@@ -378,9 +637,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(f01d6b9018ab421dd410404cb869072065522bf85734008f105cf385a023a80f, 0eba29d0f0c5408ed681984dc525982abefccd9f7ff01dd26da4999cf3f6a295)\n",
+      "0x969f6056aa26f7d2795fd013fe88868d09c9f6aed96965016e1936ae47060d48\n",
+      "0x2b698a0f0a4041b77e63488ad48c23e8e8838dd1fb7520408b121697b782ef22\n",
+      "0x1dbc63bfef4416705e602a7b564161167076d8b20990a0f26f316cff2cb0bc1a\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7\n",
     "\n",
@@ -390,13 +660,47 @@
     "z = int.from_bytes(hash256(b'Programming Bitcoin!'), 'big')\n",
     "\n",
     "# choose a random k\n",
+    "k = 1234567890\n",
     "# calculate r (kG's x-coordinate)\n",
+    "r = (k * G).x.num\n",
     "# calculate s ((z+re)/k)\n",
-    "# print the point, z, r and s"
+    "k_inv = pow(k, N-2, N)\n",
+    "s = (z + r * e) * k_inv % N\n",
+    "# print the point, z, r and s\n",
+    "point = e * G\n",
+    "print(point)\n",
+    "print(hex(z))\n",
+    "print(hex(r))\n",
+    "print(hex(s))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
